bin/parser/Sili.jjt
/*
 * A simple expression parser and evaluator
 *
 */

options {
  LOOKAHEAD = 1;
  CHOICE_AMBIGUITY_CHECK = 2;
  OTHER_AMBIGUITY_CHECK = 1;
  STATIC = false;
  DEBUG_PARSER = false;
  DEBUG_LOOKAHEAD = false;
  DEBUG_TOKEN_MANAGER = false;
  ERROR_REPORTING = true;
  JAVA_UNICODE_ESCAPE = false;
  UNICODE_INPUT = false;
  IGNORE_CASE = false;
  USER_TOKEN_MANAGER = false;
  USER_CHAR_STREAM = false;
  BUILD_PARSER = true;
  BUILD_TOKEN_MANAGER = true;
  SANITY_CHECK = true;
  FORCE_LA_CHECK = false;
  MULTI = true;
  VISITOR = true;
  JDK_VERSION = "1.8";
  NODE_DEFAULT_VOID = true;
  NODE_EXTENDS = "interpreter.BaseASTNode";
  NODE_PACKAGE = "parser.ast";
  JJTREE_OUTPUT_DIRECTORY = "ast";
}

PARSER_BEGIN(Sili)
package parser.ast;
public class Sili {}
PARSER_END(Sili)

/*
 *
 * Lexer definitions
 *
 */

SKIP : /* WHITE SPACE */
{
  " "
| "\t"
| "\n"
| "\r"
| "\f"
}

SPECIAL_TOKEN : /* COMMENTS */
{
  <SINGLE_LINE_COMMENT: "//" (~["\n","\r"])* ("\n"|"\r"|"\r\n")>
| <FORMAL_COMMENT: "/**" (~["*"])* "*" ("*" | (~["*","/"] (~["*"])* "*"))* "/">
| <MULTI_LINE_COMMENT: "/*" (~["*"])* "*" ("*" | (~["*","/"] (~["*"])* "*"))* "/">
}

TOKEN [IGNORE_CASE] : /* RESERVED WORDS AND LITERALS */
{
  < IF: "IF" >
| < ELSE: "ELSE" >
| < FOR: "FOR" >
| < FORT: "FORT" >
| < TO: "TO" >
| < STEP: "STEP" >
| < WHILE: "WHILE" >
| < PRINT: "PRINT" >
| < PRINTLN: "PRINTLN" >
| < QUIT: "QUIT" >
| < FUNCTION: "FUNCTION" >
| < RETURN: "RETURN" >
| < OR: "OR" >
| < AND: "AND" >
| < NOT: "NOT" >
| < TRUE: "TRUE" >
| < FALSE: "FALSE" >
}

TOKEN : /* LITERALS */
{
  < INTEGER_LITERAL:
        <DECIMAL_LITERAL> (["l","L"])?
      | <HEX_LITERAL> (["l","L"])?
      | <OCTAL_LITERAL> (["l","L"])?
  >
|
  < #DECIMAL_LITERAL: ["1"-"9"] (["0"-"9"])* >
|
  < #HEX_LITERAL: "0" ["x","X"] (["0"-"9","a"-"f","A"-"F"])+ >
|
  < #OCTAL_LITERAL: "0" (["0"-"7"])* >
|
  < FLOATING_POINT_LITERAL:
        (["0"-"9"])+ "." (["0"-"9"])* (<EXPONENT>)? (["f","F","d","D"])?
      | "." (["0"-"9"])+ (<EXPONENT>)? (["f","F","d","D"])?
      | (["0"-"9"])+ <EXPONENT> (["f","F","d","D"])?
      | (["0"-"9"])+ (<EXPONENT>)? ["f","F","d","D"]
  >
|
  < #EXPONENT: ["e","E"] (["+","-"])? (["0"-"9"])+ >
|
  < STRING_LITERAL:
     ( 
      "\""
      (   (~["\"","\\","\n","\r"])
        | ("\\"
            ( ["n","t","b","r","f","\\","'","\""]
            | ["0"-"7"] ( ["0"-"7"] )?
            | ["0"-"3"] ["0"-"7"] ["0"-"7"]
            )
          )
      )*
      "\""
     )
   | (
      "'"
      (   (~["\'","\\","\n","\r"])
        | ("\\"
            ( ["n","t","b","r","f","\\","'","\""]
            | ["0"-"7"] ( ["0"-"7"] )?
            | ["0"-"3"] ["0"-"7"] ["0"-"7"]
            )
          )
      )*
      "'"
     )
  >
}

TOKEN : /* IDENTIFIERS */
{
  < IDENTIFIER: <LETTER> (<LETTER>|<DIGIT>|"#")* >
| < #LETTER:
      [
       "\u0024",
       "\u0041"-"\u005a",
       "\u005f",
       "\u0061"-"\u007a",
       "\u00c0"-"\u00d6",
       "\u00d8"-"\u00f6",
       "\u00f8"-"\u00ff",
       "\u0100"-"\u1fff",
       "\u3040"-"\u318f",
       "\u3300"-"\u337f",
       "\u3400"-"\u3d2d",
       "\u4e00"-"\u9fff",
       "\uf900"-"\ufaff"
      ]
  >
|
  < #DIGIT:
      [
       "\u0030"-"\u0039",
       "\u0660"-"\u0669",
       "\u06f0"-"\u06f9",
       "\u0966"-"\u096f",
       "\u09e6"-"\u09ef",
       "\u0a66"-"\u0a6f",
       "\u0ae6"-"\u0aef",
       "\u0b66"-"\u0b6f",
       "\u0be7"-"\u0bef",
       "\u0c66"-"\u0c6f",
       "\u0ce6"-"\u0cef",
       "\u0d66"-"\u0d6f",
       "\u0e50"-"\u0e59",
       "\u0ed0"-"\u0ed9",
       "\u1040"-"\u1049"
      ]
  >
}

TOKEN : /* SEPARATORS */
{
  < LPAREN: "(" >
| < RPAREN: ")" >
| < LBRACE: "{" >
| < RBRACE: "}" >
| < LBRACKET: "[" >
| < RBRACKET: "]" >
| < SEMICOLON: ";" >
| < COMMA: "," >
| < DOT: "." >
| < PP: "++" >
| < MM: "--" >
}

TOKEN : /* OPERATOR SYMBOLS */
{
  < ASSIGN: "=" >
| < PEQ: "+=" >
| < MEQ: "-=" >
| < UEQ: "@=" >
| < EQ: "==" >
| < GT: ">" >
| < LT: "<" >
| < LE: "<=" >
| < GE: ">=" >
| < NE: "!=" >
| < HOOK: "?" >
| < COLON: ":" >
| < PLUS: "+" >
| < SUBT: "-" >
| < STAR: "*" >
| < SLASH: "/" >
| < REM: "%" >
| < POW: "^" >
| < SQRT: "**" >
}

/***********************************************
 *          THE GRAMMAR STARTS HERE            *
 ***********************************************/

ASTCode code() #Code :
{}
{
     			      statement() ( statement() )* <EOF>  {return jjtThis;}
}

void statement() #Statement :
{}
{
				 	LOOKAHEAD(2) assignment()
				|	LOOKAHEAD(3) arraysetindex()
				|	fndef()
				|	block()
				|	ifstatement()	
				|	LOOKAHEAD(6) forloop()
				|   LOOKAHEAD(6) fortoloop()
				|   whileloop()
				|	print()
				|   println()
				|   quit()
				|	LOOKAHEAD(2) call()
				|   LOOKAHEAD(2) array_function()
}

void block() #Block :
{}
{
					"{" ( statement() )* "}"
}

void parmlist() #Parmlist :
{}
{
					"(" [ identifier() ( "," identifier() )* ] ")"
}

void fnbody() #FnBody :
{}
{
					( statement() )* 
}

void fndef() #FnDef :
{}
{
					<FUNCTION> identifier() parmlist() "{" 
						fnbody()
						[ <RETURN> returnexpr() {jjtThis.fnHasReturn = true;} ] 
					"}"
}

void returnexpr() #ReturnExpression :
{}
{
					expression()
}

void assignment() :
{}
{
					  LOOKAHEAD(2) identifier() "=" expression() #Assignment(2)
					| LOOKAHEAD(2) identifier() "+=" expression() #AdditionAssignment(2)
					| LOOKAHEAD(2) identifier() "-=" expression() #SubtractionAssignment(2)
}

void arraysetindex():
{}
{
  					identifier() "[" expression() "]" "=" expression() #ArraySetIndex(3)
}

void array_function() :
{}
{
    				  LOOKAHEAD(2) identifier() ".getIndex" "(" expression() ")" #ArrayGetIndex(2)
  					| LOOKAHEAD(2) identifier() ".setIndex" "(" expression() "," expression() ")" #ArraySetIndex(3)
  					| LOOKAHEAD(2) identifier() ".push" "(" expression() ")" #ArrayPush(2)
  					| LOOKAHEAD(4) identifier() ".pop" "(" ")" #ArrayPop(1)
  					| LOOKAHEAD(2) identifier() ".length" "(" ")" #ArrayLength(1)
  					| LOOKAHEAD(2) identifier() ".print" "(" ")" #ArrayPrint(1)
  					| LOOKAHEAD(2) identifier() ".sort" "(" ")" #ArraySort(1)
  					| LOOKAHEAD(2) identifier() ".first" "(" ")" #ArrayFirst(1)
  					| LOOKAHEAD(2) identifier() ".last" "(" ")" #ArrayLast(1)
  					| LOOKAHEAD(2) identifier() ".insert" "(" expression() "," expression() ")" #ArrayInsert(3)
  					| LOOKAHEAD(2) identifier() ".remove" "(" expression() ")" #ArrayRemove(2)

  					| LOOKAHEAD(2) identifier() ".put" "(" expression() "," expression() ")" #DictPut(3)
  					| LOOKAHEAD(2) identifier() ".get" "(" expression() ")" #DictGet(2)
  					| LOOKAHEAD(4) identifier() ".pop" "(" expression() ")" #DictPop(2)
  					| LOOKAHEAD(2) identifier() ".replace" "(" expression() "," expression() ")" #DictReplace(3)

  					// modulo
}

void ifstatement() #IfStatement :
{}
{
  					<IF> "(" expression() ")" statement() 
  					[ LOOKAHEAD(1) <ELSE> statement() {jjtThis.ifHasElse = true;} ]
}

void forloop() #ForLoop :
{}
{
  					<FOR> "(" assignment() ";" expression() ";" assignment() ")" statement()
}

void whileloop() #WhileLoop :
{}
{
  					<WHILE> "(" expression() ")" statement()
}

/*
	for (i = 1 to 10) {
	
	}
*/

void fortoloop() #ForToLoop:
{}
{
  					<FOR> "(" identifier() "," expression() 
  						[ "," expression() { jjtThis.loopHasStart = true; } ]
						[ "," expression() { jjtThis.loopHasStep = true; } ]
  					")" statement()
}

void print() :
{}
{
					<PRINT> "(" expression() ")" #Print(1)
}

void println() :
{}
{
					<PRINTLN> "(" expression() ")" #PrintLn(1)
}

void quit() :
{}
{
					<QUIT> "(" ")" #Quit
}

void call() #Call :
{}
{
					identifier() arglist()
}

void arglist() #ArgList :
{}
{
					"(" [ expression() ] ( "," expression() )* ")"
}

//
// Expressions
//

void expression() :
{}
{
                  or_expression()
}

void or_expression() : 
{} 
{ 
			      and_expression() ( <OR> and_expression() #Or(2) )* 
}

void and_expression() : 
{} 
{ 
			      compare_expression() ( <AND> compare_expression() #And(2) )*
}

void compare_expression() : 
{} 
{ 
                              add_expression() [
                                 "=="  add_expression() #CompEqual(2)
                               | "<>" add_expression() #CompNequal(2)
                               | ">=" add_expression() #CompGTE(2)
                               | "<=" add_expression() #CompLTE(2)
                               | ">"  add_expression() #CompGT(2)
                               | "<"  add_expression() #CompLT(2)
                               ]
}

void add_expression() : 
{} 
{
                              mul_expression() (
                                  "+"  mul_expression() #Add(2)
                                | "-"  mul_expression() #Subtract(2)
                              )*
}

void mul_expression() : 
{} 
{ 
			      			  unary_expression() ( 
                                  "*" unary_expression() #Times(2)
                                | "/" unary_expression() #Divide(2)
                                | "%" unary_expression() #Remainder(2)

                                // bodge-y way to implement math functions :) 
                                | "^" unary_expression() #Pow(2)
                                | "**" unary_expression() #Sqrt(2)
                                | "?" unary_expression() #Random(2)
                                | "~" unary_expression() #Floor(2)
                                | "@" unary_expression() #Cos(2)
                                | "@@" unary_expression() #Sin(2)
                              )*
}

void unary_expression() :
{}
{
                              <NOT> unary_expression() #UnaryNot(1)
                            | "+"   unary_expression() #UnaryPlus(1)
                            | "-"   unary_expression() #UnaryMinus(1)
                            | primary_expression()
}

void primary_expression() : 
{}
{
                              literal()
                            | LOOKAHEAD(2) fn_invoke()
                            | LOOKAHEAD(2) arrayindex()
                            | LOOKAHEAD(2) array_function()
                            | dereference()
                            | "(" expression() ")"
                            | arraylist()
                            | dictionarylist()
}

void arrayindex():
{}
{
  				identifier() "[" expression() "]" #ArrayGetIndex(2)
}

void arraylist() #ArrayList :
{}
{
  							"[" [ expression() ( "," expression() )* ] "]"
}

void dictionarylist() #DictionaryList :
{}
{
 							"{" [ character() ":" literal() ( "," character() ":" literal() )* ] "}"
 							// a = { },  a = { "apple":3, "orange":12, "banana": 5 }
}

void fn_invoke() #FnInvoke :
{}
{
							identifier() arglist()
}

void literal() :
{}
{
							  integer()
                            | character()							  	
							| rational()
							| bool()
}

void identifier() #Identifier :
{Token t;}
{
	t = <IDENTIFIER> {jjtThis.tokenValue = t.image;}
}

void dereference() #Dereference :
{Token t;}
{
	t = <IDENTIFIER> {jjtThis.tokenValue = t.image;}
}

void character() #Character :
{Token t;}
{
	t = <STRING_LITERAL> {jjtThis.tokenValue = t.image;}
}

void integer() #Integer : 
{Token t;} 
{ 
	t = <INTEGER_LITERAL> {jjtThis.tokenValue = t.image;}
}

void rational() #Rational : 
{Token t;} 
{ 
	t = <FLOATING_POINT_LITERAL> {jjtThis.tokenValue = t.image;}
}

void bool() : 
{} 
{ 
			      <TRUE> #True
                | <FALSE> #False
}
