src/parser/ast/Sili.java
/* Generated By:JJTree&JavaCC: Do not edit this line. Sili.java */
package parser.ast;
public class Sili/*@bgen(jjtree)*/implements SiliTreeConstants, SiliConstants {/*@bgen(jjtree)*/
  protected JJTSiliState jjtree = new JJTSiliState();

/***********************************************
 *          THE GRAMMAR STARTS HERE            *
 ***********************************************/
  final public ASTCode code() throws ParseException {
 /*@bgen(jjtree) Code */
  ASTCode jjtn000 = new ASTCode(JJTCODE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      statement();
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IF:
        case FOR:
        case WHILE:
        case PRINT:
        case PRINTLN:
        case QUIT:
        case FUNCTION:
        case IDENTIFIER:
        case LBRACE:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        statement();
      }
      jj_consume_token(0);
                                                                    jjtree.closeNodeScope(jjtn000, true);
                                                                    jjtc000 = false;
                                                                   {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
                                if (jjtc000) {
                                  jjtree.clearNodeScope(jjtn000);
                                  jjtc000 = false;
                                } else {
                                  jjtree.popNode();
                                }
                                if (jjte000 instanceof RuntimeException) {
                                  {if (true) throw (RuntimeException)jjte000;}
                                }
                                if (jjte000 instanceof ParseException) {
                                  {if (true) throw (ParseException)jjte000;}
                                }
                                {if (true) throw (Error)jjte000;}
    } finally {
                                if (jjtc000) {
                                  jjtree.closeNodeScope(jjtn000, true);
                                }
    }
    throw new Error("Missing return statement in function");
  }

  final public void statement() throws ParseException {
 /*@bgen(jjtree) Statement */
  ASTStatement jjtn000 = new ASTStatement(JJTSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_1(2)) {
        assignment();
      } else if (jj_2_2(3)) {
        arraysetindex();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case FUNCTION:
          fndef();
          break;
        case LBRACE:
          block();
          break;
        case IF:
          ifstatement();
          break;
        default:
          jj_la1[1] = jj_gen;
          if (jj_2_3(6)) {
            forloop();
          } else if (jj_2_4(6)) {
            fortoloop();
          } else {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case WHILE:
              whileloop();
              break;
            case PRINT:
              print();
              break;
            case PRINTLN:
              println();
              break;
            case QUIT:
              quit();
              break;
            default:
              jj_la1[2] = jj_gen;
              if (jj_2_5(2)) {
                call();
              } else if (jj_2_6(2)) {
                array_function();
              } else {
                jj_consume_token(-1);
                throw new ParseException();
              }
            }
          }
        }
      }
    } catch (Throwable jjte000) {
                                          if (jjtc000) {
                                            jjtree.clearNodeScope(jjtn000);
                                            jjtc000 = false;
                                          } else {
                                            jjtree.popNode();
                                          }
                                          if (jjte000 instanceof RuntimeException) {
                                            {if (true) throw (RuntimeException)jjte000;}
                                          }
                                          if (jjte000 instanceof ParseException) {
                                            {if (true) throw (ParseException)jjte000;}
                                          }
                                          {if (true) throw (Error)jjte000;}
    } finally {
                                          if (jjtc000) {
                                            jjtree.closeNodeScope(jjtn000, true);
                                          }
    }
  }

  final public void block() throws ParseException {
 /*@bgen(jjtree) Block */
  ASTBlock jjtn000 = new ASTBlock(JJTBLOCK);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(LBRACE);
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IF:
        case FOR:
        case WHILE:
        case PRINT:
        case PRINTLN:
        case QUIT:
        case FUNCTION:
        case IDENTIFIER:
        case LBRACE:
          ;
          break;
        default:
          jj_la1[3] = jj_gen;
          break label_2;
        }
        statement();
      }
      jj_consume_token(RBRACE);
    } catch (Throwable jjte000) {
                                          if (jjtc000) {
                                            jjtree.clearNodeScope(jjtn000);
                                            jjtc000 = false;
                                          } else {
                                            jjtree.popNode();
                                          }
                                          if (jjte000 instanceof RuntimeException) {
                                            {if (true) throw (RuntimeException)jjte000;}
                                          }
                                          if (jjte000 instanceof ParseException) {
                                            {if (true) throw (ParseException)jjte000;}
                                          }
                                          {if (true) throw (Error)jjte000;}
    } finally {
                                          if (jjtc000) {
                                            jjtree.closeNodeScope(jjtn000, true);
                                          }
    }
  }

  final public void parmlist() throws ParseException {
 /*@bgen(jjtree) Parmlist */
  ASTParmlist jjtn000 = new ASTParmlist(JJTPARMLIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(LPAREN);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        identifier();
        label_3:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case COMMA:
            ;
            break;
          default:
            jj_la1[4] = jj_gen;
            break label_3;
          }
          jj_consume_token(COMMA);
          identifier();
        }
        break;
      default:
        jj_la1[5] = jj_gen;
        ;
      }
      jj_consume_token(RPAREN);
    } catch (Throwable jjte000) {
                                          if (jjtc000) {
                                            jjtree.clearNodeScope(jjtn000);
                                            jjtc000 = false;
                                          } else {
                                            jjtree.popNode();
                                          }
                                          if (jjte000 instanceof RuntimeException) {
                                            {if (true) throw (RuntimeException)jjte000;}
                                          }
                                          if (jjte000 instanceof ParseException) {
                                            {if (true) throw (ParseException)jjte000;}
                                          }
                                          {if (true) throw (Error)jjte000;}
    } finally {
                                          if (jjtc000) {
                                            jjtree.closeNodeScope(jjtn000, true);
                                          }
    }
  }

  final public void fnbody() throws ParseException {
 /*@bgen(jjtree) FnBody */
  ASTFnBody jjtn000 = new ASTFnBody(JJTFNBODY);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IF:
        case FOR:
        case WHILE:
        case PRINT:
        case PRINTLN:
        case QUIT:
        case FUNCTION:
        case IDENTIFIER:
        case LBRACE:
          ;
          break;
        default:
          jj_la1[6] = jj_gen;
          break label_4;
        }
        statement();
      }
    } catch (Throwable jjte000) {
                                          if (jjtc000) {
                                            jjtree.clearNodeScope(jjtn000);
                                            jjtc000 = false;
                                          } else {
                                            jjtree.popNode();
                                          }
                                          if (jjte000 instanceof RuntimeException) {
                                            {if (true) throw (RuntimeException)jjte000;}
                                          }
                                          if (jjte000 instanceof ParseException) {
                                            {if (true) throw (ParseException)jjte000;}
                                          }
                                          {if (true) throw (Error)jjte000;}
    } finally {
                                          if (jjtc000) {
                                            jjtree.closeNodeScope(jjtn000, true);
                                          }
    }
  }

  final public void fndef() throws ParseException {
 /*@bgen(jjtree) FnDef */
  ASTFnDef jjtn000 = new ASTFnDef(JJTFNDEF);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(FUNCTION);
      identifier();
      parmlist();
      jj_consume_token(LBRACE);
      fnbody();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case RETURN:
        jj_consume_token(RETURN);
        returnexpr();
                                                                         jjtn000.fnHasReturn = true;
        break;
      default:
        jj_la1[7] = jj_gen;
        ;
      }
      jj_consume_token(RBRACE);
    } catch (Throwable jjte000) {
                                          if (jjtc000) {
                                            jjtree.clearNodeScope(jjtn000);
                                            jjtc000 = false;
                                          } else {
                                            jjtree.popNode();
                                          }
                                          if (jjte000 instanceof RuntimeException) {
                                            {if (true) throw (RuntimeException)jjte000;}
                                          }
                                          if (jjte000 instanceof ParseException) {
                                            {if (true) throw (ParseException)jjte000;}
                                          }
                                          {if (true) throw (Error)jjte000;}
    } finally {
                                          if (jjtc000) {
                                            jjtree.closeNodeScope(jjtn000, true);
                                          }
    }
  }

  final public void returnexpr() throws ParseException {
 /*@bgen(jjtree) ReturnExpression */
  ASTReturnExpression jjtn000 = new ASTReturnExpression(JJTRETURNEXPRESSION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      expression();
    } catch (Throwable jjte000) {
                                          if (jjtc000) {
                                            jjtree.clearNodeScope(jjtn000);
                                            jjtc000 = false;
                                          } else {
                                            jjtree.popNode();
                                          }
                                          if (jjte000 instanceof RuntimeException) {
                                            {if (true) throw (RuntimeException)jjte000;}
                                          }
                                          if (jjte000 instanceof ParseException) {
                                            {if (true) throw (ParseException)jjte000;}
                                          }
                                          {if (true) throw (Error)jjte000;}
    } finally {
                                          if (jjtc000) {
                                            jjtree.closeNodeScope(jjtn000, true);
                                          }
    }
  }

  final public void assignment() throws ParseException {
    if (jj_2_7(2)) {
      identifier();
      jj_consume_token(ASSIGN);
                                                                          ASTAssignment jjtn001 = new ASTAssignment(JJTASSIGNMENT);
                                                                          boolean jjtc001 = true;
                                                                          jjtree.openNodeScope(jjtn001);
      try {
        expression();
      } catch (Throwable jjte001) {
                                                                          if (jjtc001) {
                                                                            jjtree.clearNodeScope(jjtn001);
                                                                            jjtc001 = false;
                                                                          } else {
                                                                            jjtree.popNode();
                                                                          }
                                                                          if (jjte001 instanceof RuntimeException) {
                                                                            {if (true) throw (RuntimeException)jjte001;}
                                                                          }
                                                                          if (jjte001 instanceof ParseException) {
                                                                            {if (true) throw (ParseException)jjte001;}
                                                                          }
                                                                          {if (true) throw (Error)jjte001;}
      } finally {
                                                                          if (jjtc001) {
                                                                            jjtree.closeNodeScope(jjtn001,  2);
                                                                          }
      }
    } else if (jj_2_8(2)) {
      identifier();
      jj_consume_token(PEQ);
                                                                           ASTAdditionAssignment jjtn002 = new ASTAdditionAssignment(JJTADDITIONASSIGNMENT);
                                                                           boolean jjtc002 = true;
                                                                           jjtree.openNodeScope(jjtn002);
      try {
        expression();
      } catch (Throwable jjte002) {
                                                                           if (jjtc002) {
                                                                             jjtree.clearNodeScope(jjtn002);
                                                                             jjtc002 = false;
                                                                           } else {
                                                                             jjtree.popNode();
                                                                           }
                                                                           if (jjte002 instanceof RuntimeException) {
                                                                             {if (true) throw (RuntimeException)jjte002;}
                                                                           }
                                                                           if (jjte002 instanceof ParseException) {
                                                                             {if (true) throw (ParseException)jjte002;}
                                                                           }
                                                                           {if (true) throw (Error)jjte002;}
      } finally {
                                                                           if (jjtc002) {
                                                                             jjtree.closeNodeScope(jjtn002,  2);
                                                                           }
      }
    } else if (jj_2_9(2)) {
      identifier();
      jj_consume_token(MEQ);
                                                                           ASTSubtractionAssignment jjtn003 = new ASTSubtractionAssignment(JJTSUBTRACTIONASSIGNMENT);
                                                                           boolean jjtc003 = true;
                                                                           jjtree.openNodeScope(jjtn003);
      try {
        expression();
      } catch (Throwable jjte003) {
                                                                           if (jjtc003) {
                                                                             jjtree.clearNodeScope(jjtn003);
                                                                             jjtc003 = false;
                                                                           } else {
                                                                             jjtree.popNode();
                                                                           }
                                                                           if (jjte003 instanceof RuntimeException) {
                                                                             {if (true) throw (RuntimeException)jjte003;}
                                                                           }
                                                                           if (jjte003 instanceof ParseException) {
                                                                             {if (true) throw (ParseException)jjte003;}
                                                                           }
                                                                           {if (true) throw (Error)jjte003;}
      } finally {
                                                                           if (jjtc003) {
                                                                             jjtree.closeNodeScope(jjtn003,  2);
                                                                           }
      }
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void arraysetindex() throws ParseException {
    identifier();
    jj_consume_token(LBRACKET);
    expression();
    jj_consume_token(RBRACKET);
    jj_consume_token(ASSIGN);
                                                                                ASTArraySetIndex jjtn001 = new ASTArraySetIndex(JJTARRAYSETINDEX);
                                                                                boolean jjtc001 = true;
                                                                                jjtree.openNodeScope(jjtn001);
    try {
      expression();
    } catch (Throwable jjte001) {
                                                                                if (jjtc001) {
                                                                                  jjtree.clearNodeScope(jjtn001);
                                                                                  jjtc001 = false;
                                                                                } else {
                                                                                  jjtree.popNode();
                                                                                }
                                                                                if (jjte001 instanceof RuntimeException) {
                                                                                  {if (true) throw (RuntimeException)jjte001;}
                                                                                }
                                                                                if (jjte001 instanceof ParseException) {
                                                                                  {if (true) throw (ParseException)jjte001;}
                                                                                }
                                                                                {if (true) throw (Error)jjte001;}
    } finally {
                                                                                if (jjtc001) {
                                                                                  jjtree.closeNodeScope(jjtn001,  3);
                                                                                }
    }
  }

  final public void array_function() throws ParseException {
    if (jj_2_10(2)) {
      identifier();
      jj_consume_token(66);
      jj_consume_token(LPAREN);
      expression();
                                                                                           ASTArrayGetIndex jjtn001 = new ASTArrayGetIndex(JJTARRAYGETINDEX);
                                                                                           boolean jjtc001 = true;
                                                                                           jjtree.openNodeScope(jjtn001);
      try {
        jj_consume_token(RPAREN);
      } finally {
                                                                                           if (jjtc001) {
                                                                                             jjtree.closeNodeScope(jjtn001,  2);
                                                                                           }
      }
    } else if (jj_2_11(2)) {
      identifier();
      jj_consume_token(67);
      jj_consume_token(LPAREN);
      expression();
      jj_consume_token(COMMA);
      expression();
                                                                                                                    ASTArraySetIndex jjtn002 = new ASTArraySetIndex(JJTARRAYSETINDEX);
                                                                                                                    boolean jjtc002 = true;
                                                                                                                    jjtree.openNodeScope(jjtn002);
      try {
        jj_consume_token(RPAREN);
      } finally {
                                                                                                                    if (jjtc002) {
                                                                                                                      jjtree.closeNodeScope(jjtn002,  3);
                                                                                                                    }
      }
    } else if (jj_2_12(2)) {
      identifier();
      jj_consume_token(68);
      jj_consume_token(LPAREN);
      expression();
                                                                                               ASTArrayPush jjtn003 = new ASTArrayPush(JJTARRAYPUSH);
                                                                                               boolean jjtc003 = true;
                                                                                               jjtree.openNodeScope(jjtn003);
      try {
        jj_consume_token(RPAREN);
      } finally {
                                                                                               if (jjtc003) {
                                                                                                 jjtree.closeNodeScope(jjtn003,  2);
                                                                                               }
      }
    } else if (jj_2_13(4)) {
      identifier();
      jj_consume_token(69);
      jj_consume_token(LPAREN);
                                                                                 ASTArrayPop jjtn004 = new ASTArrayPop(JJTARRAYPOP);
                                                                                 boolean jjtc004 = true;
                                                                                 jjtree.openNodeScope(jjtn004);
      try {
        jj_consume_token(RPAREN);
      } finally {
                                                                                 if (jjtc004) {
                                                                                   jjtree.closeNodeScope(jjtn004,  1);
                                                                                 }
      }
    } else if (jj_2_14(2)) {
      identifier();
      jj_consume_token(70);
      jj_consume_token(LPAREN);
                                                                                    ASTArrayLength jjtn005 = new ASTArrayLength(JJTARRAYLENGTH);
                                                                                    boolean jjtc005 = true;
                                                                                    jjtree.openNodeScope(jjtn005);
      try {
        jj_consume_token(RPAREN);
      } finally {
                                                                                    if (jjtc005) {
                                                                                      jjtree.closeNodeScope(jjtn005,  1);
                                                                                    }
      }
    } else if (jj_2_15(2)) {
      identifier();
      jj_consume_token(71);
      jj_consume_token(LPAREN);
                                                                                   ASTArrayPrint jjtn006 = new ASTArrayPrint(JJTARRAYPRINT);
                                                                                   boolean jjtc006 = true;
                                                                                   jjtree.openNodeScope(jjtn006);
      try {
        jj_consume_token(RPAREN);
      } finally {
                                                                                   if (jjtc006) {
                                                                                     jjtree.closeNodeScope(jjtn006,  1);
                                                                                   }
      }
    } else if (jj_2_16(2)) {
      identifier();
      jj_consume_token(72);
      jj_consume_token(LPAREN);
                                                                                   ASTArrayFirst jjtn007 = new ASTArrayFirst(JJTARRAYFIRST);
                                                                                   boolean jjtc007 = true;
                                                                                   jjtree.openNodeScope(jjtn007);
      try {
        jj_consume_token(RPAREN);
      } finally {
                                                                                   if (jjtc007) {
                                                                                     jjtree.closeNodeScope(jjtn007,  1);
                                                                                   }
      }
    } else if (jj_2_17(2)) {
      identifier();
      jj_consume_token(73);
      jj_consume_token(LPAREN);
                                                                                  ASTArrayLast jjtn008 = new ASTArrayLast(JJTARRAYLAST);
                                                                                  boolean jjtc008 = true;
                                                                                  jjtree.openNodeScope(jjtn008);
      try {
        jj_consume_token(RPAREN);
      } finally {
                                                                                  if (jjtc008) {
                                                                                    jjtree.closeNodeScope(jjtn008,  1);
                                                                                  }
      }
    } else if (jj_2_18(2)) {
      identifier();
      jj_consume_token(74);
      jj_consume_token(LPAREN);
      expression();
      jj_consume_token(COMMA);
      expression();
                                                                                                                  ASTArrayInsert jjtn009 = new ASTArrayInsert(JJTARRAYINSERT);
                                                                                                                  boolean jjtc009 = true;
                                                                                                                  jjtree.openNodeScope(jjtn009);
      try {
        jj_consume_token(RPAREN);
      } finally {
                                                                                                                  if (jjtc009) {
                                                                                                                    jjtree.closeNodeScope(jjtn009,  3);
                                                                                                                  }
      }
    } else if (jj_2_19(2)) {
      identifier();
      jj_consume_token(75);
      jj_consume_token(LPAREN);
      expression();
                                                                                                 ASTArrayRemove jjtn010 = new ASTArrayRemove(JJTARRAYREMOVE);
                                                                                                 boolean jjtc010 = true;
                                                                                                 jjtree.openNodeScope(jjtn010);
      try {
        jj_consume_token(RPAREN);
      } finally {
                                                                                                 if (jjtc010) {
                                                                                                   jjtree.closeNodeScope(jjtn010,  2);
                                                                                                 }
      }
    } else if (jj_2_20(2)) {
      identifier();
      jj_consume_token(76);
      jj_consume_token(LPAREN);
      expression();
      jj_consume_token(COMMA);
      expression();
                                                                                                               ASTDictPut jjtn011 = new ASTDictPut(JJTDICTPUT);
                                                                                                               boolean jjtc011 = true;
                                                                                                               jjtree.openNodeScope(jjtn011);
      try {
        jj_consume_token(RPAREN);
      } finally {
                                                                                                               if (jjtc011) {
                                                                                                                 jjtree.closeNodeScope(jjtn011,  3);
                                                                                                               }
      }
    } else if (jj_2_21(2)) {
      identifier();
      jj_consume_token(77);
      jj_consume_token(LPAREN);
      expression();
                                                                                              ASTDictGet jjtn012 = new ASTDictGet(JJTDICTGET);
                                                                                              boolean jjtc012 = true;
                                                                                              jjtree.openNodeScope(jjtn012);
      try {
        jj_consume_token(RPAREN);
      } finally {
